--- a/app/templates/public/temp.html
+++ b/app/templates/public/temp.html
@@ -391,7 +391,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6" data-aos="zoom-im" data-aos-delay="100">
             <div class="box">
-              <h3>Free</h3>
+              <h3>Silver</h3>
               <h4><sup>$</sup>2.00<span> / response</span></h4>
               <ul>
                 <li>Min. order 500 responses</li>
@@ -407,7 +407,7 @@
 
           <div class="col-lg-4 col-md-6 mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="100">
             <div class="box featured">
-              <h3>Business</h3>
+              <h3>Gold</h3>
               <h4><sup>$</sup>2.50<span> / response</span></h4>
               <ul>
                 <li>Min. order 500 responses</li>
@@ -423,7 +423,7 @@
 
           <div class="col-lg-4 col-md-6 mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="100">
             <div class="box">
-              <h3>Developer</h3>
+              <h3>Platinum</h3>
               <h4><sup>$</sup>3.00<span> / response</span></h4>
               <ul>
                 <li>Min. order 250 responses</li>
