--- a/app/templates/question/create_multiple_choice_question.html
+++ b/app/templates/question/create_multiple_choice_question.html
@@ -14,7 +14,7 @@
                 Back to Questions' List
             </a>
             <h2 class="ui header">
-                Create a scale based question
+                Create a multiple choice based question
                 <div class="sub header">Add a scale based question</div>
             </h2>
 
