--- a/app/templates/question/create_question.html
+++ b/app/templates/question/create_question.html
@@ -26,28 +26,39 @@
             } %}
 
             {{ f.begin_form(form, flashes) }}
-
             <div class="field">
-                {{ f.render_form_field(form.question) }}
+                {{ f.render_form_field(form.title) }}
             </div>
             <div class="field">
                 {{ f.render_form_field(form.description) }}
             </div>
-            <div class="field">
-                {{ f.render_form_field(form.option_one) }}
-            </div>
-            <div class="field">
-                {{ f.render_form_field(form.option_two) }}
-            </div>
-            <div class="field">
-                {{ f.render_form_field(form.option_three) }}
-            </div>
-            <div class="field">
-                {{ f.render_form_field(form.option_four) }}
-            </div>
-            <div class="field">
-                {{ f.render_form_field(form.option_five) }}
-            </div>
+					
+			<div class="ui placeholder segment">
+			  <div class="ui two column stackable center aligned grid">
+				<div class="ui vertical divider">And</div>
+				<div class="middle aligned row">
+				  <div class="column">
+					<div class="ui header">
+					  Question
+					</div>
+					<div class="field">
+						{{ f.render_form_field(form.option_one) }}
+					</div>
+				  </div>
+				  <div class="column">
+					<div class="ui header">
+					  Scale
+					</div>
+					<div class="field">
+					   {{ f.render_form_field(form.option_one_scale) }}
+					</div>
+				  </div>
+				</div>
+			  </div>
+			</div>	
+			</div>			
+
+
             {{ f.form_message(flashes['error'], header='Something went wrong.', class='error') }}
             {{ f.form_message(flashes['warning'], header='Check your email.', class='warning') }}
             {{ f.form_message(flashes['info'], header='Information', class='info') }}
