--- a/app/templates/question/create_scale_question.html
+++ b/app/templates/question/create_scale_question.html
@@ -13,6 +13,9 @@
                 <i class="caret left icon"></i>
                 Back to Questions' List
             </a>
+			<div class="ui segment">
+			  <p>A scaled question is a question that asks you to measure your opinion on a product, service, etc. by choosing a number from a lowest possible number to a highest possible number.</p>
+			</div>
             <h2 class="ui header">
                 Create a scale based question
                 <div class="sub header">Add a scale based question</div>
