--- a/app/templates/project/create_project.html
+++ b/app/templates/project/create_project.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base.html' %}
 {% import 'macros/form_macros.html' as f %}
-{% import 'macros/check_password.html' as check %}
+
 
 
 {% block scripts %}
@@ -30,7 +30,13 @@
             <div class="field">
                 {{ f.render_form_field(form.name) }}
             </div>
-
+            <div class="two fields">
+                {{ f.render_form_field(form.order_quantity ) }}
+                {{ f.render_form_field(form.service_type) }}
+            </div>
+            <div class="field">
+                {{ f.render_form_field(form.currency) }}
+            </div>
             {{ f.form_message(flashes['error'], header='Something went wrong.', class='error') }}
             {{ f.form_message(flashes['warning'], header='Check your email.', class='warning') }}
             {{ f.form_message(flashes['info'], header='Information', class='info') }}
@@ -44,4 +50,6 @@
 
         </div>
     </div>
+	
+
 {% endblock %}
